[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.8",
    "faiss-cpu>=1.10.0",
    "langchain-community>=0.3.20",
    "openai>=1.66.5",
    "pypdf",
    "python-docx>=1.1.2",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.43.2",
]
